--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Page</title>
+  <link rel="stylesheet" href="/dist/css/index.css">
 </head>
 <body>
   <h1>This is a test</h1>
-  <bt class="btn btn-primary">test</bt>
+  <button class="btn btn-primary">test</button>
 </body>
 </html>
