Finishes authentication funconality process

--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -44,8 +44,8 @@
       <input type="url" name="banner" class="form-control">
     </div> -->
 
-
-    <button><a href="/profile/login/">Register</a></button>
+    <!-- <button><a href="/profile/login/">Register</a></button> -->
+    <button>Register</button>
 
 
   </form>
