--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -69,7 +69,7 @@
               </div>
 
               <div class="col-12">
-                <button id="regButton" class="btn btn-warning" type="submit">Create an account</button>
+                <button class="btn btn-warning">Create an account</button>
               </div>
             </form>
           </div>
