Adds banner to auth

--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -68,6 +68,11 @@
                 <input type="url" name="avatar" class="form-control" placeholder="Avatar's url">
               </div>
 
+              <div class="mb-3">
+                <label class="mb-1">Banner</label>
+                <input type="url" name="banner" class="form-control" placeholder="Banner's url">
+              </div>
+
               <div class="col-12">
                 <button class="btn btn-warning">Create an account</button>
               </div>
