--- a/profile/index.html
+++ b/profile/index.html
@@ -26,7 +26,7 @@
       </form>
       <div class="dropdown text-end">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="/images/Profile-img-placeholder.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+          <img src="/images/Profile-img-placeholder.jpg" alt="mdo" width="32" height="32" class="rounded-circle" id="avatar">
         </a>
         <ul class="dropdown-menu text-small">
           <li><a class="dropdown-item" href="">Profile</a></li>
@@ -45,7 +45,7 @@
         <div class="row justify-content-center">
           <div class="col-4">
             <div id="profile" class="mt-3 mb-3">
-              <img id="profileImage"   style="width: 280px"/>
+              <img id="avatar"   style="width: 280px"/>
             </div>
             <!-- <h2 id></h2> -->
             <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-body-secondary" style="width: 280px;">
