--- a/profile/index.html
+++ b/profile/index.html
@@ -15,12 +15,12 @@
       <a href="../posts/index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
         <img src="/images/Urbangarden_logo.jpg" class="bi me-2" width="150" height="32">
       </a>
-      <!-- <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="seeds.html" class="nav-link px-2 link-dark">Seed and plants</a></li>
-        <li><a href="tools.html" class="nav-link px-2 link-dark">Tools</a></li>
-        <li><a href="books.html" class="nav-link px-2 link-dark">Books</a></li>
-        <li><a href="workshops.html" class="nav-link px-2 link-dark">Workshops</a></li>
-      </ul> -->
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="seeds.html" class="nav-link px-2 link-dark" style="display: none">Seed and plants</a></li>
+        <li><a href="tools.html" class="nav-link px-2 link-dark" style="display: none">Tools</a></li>
+        <li><a href="books.html" class="nav-link px-2 link-dark" style="display: none">Books</a></li>
+        <li><a href="workshops.html" class="nav-link px-2 link-dark" style="display: none">Workshops</a></li>
+      </ul>
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="searchForm" role="search">
         <input type="search" class="form-control" id="searchInput" placeholder="Search..." aria-label="Search">
       </form>
