Adds style to create post side

--- a/profile/index.html
+++ b/profile/index.html
@@ -116,7 +116,7 @@
         
               <div class="mb-3">
                 <label for="">Media</label>
-                <input class="form-control" type="url" name="media">
+                <input class="form-control" type="url" name="media" placeholder="Please set a media URL">
               </div>
         
               <button class="btn btn-warning">Create Post</button>
