--- a/profile/index.html
+++ b/profile/index.html
@@ -34,7 +34,7 @@
                 <ul class="dropdown-menu text-small">
                   <li><a class="dropdown-item" href="">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" id="signOut">Sign out</a></li>
+                  <li><a class="dropdown-item" href="../profile/register/index.html" id="signOut">Sign out</a></li>
                 </ul>
               </div>
             </div>
