Adds new button color

--- a/profile/index.html
+++ b/profile/index.html
@@ -112,7 +112,7 @@
                         <input class="form-control" type="url" name="media" placeholder="Please set a media URL">
                       </div>
                 
-                      <button class="btn btn-warning">Create Post</button>
+                      <button class="btn  btn-outline-dark">Create Post</button>
                 
                     </form>
                   </div>
