Adds button style

--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -34,7 +34,7 @@
               </div>
 
               <div class="col-12">
-                <button id="regButton" class="btn btn-warning" type="submit">Log in</button>
+                <button id="regButton" class="btn btn-outline-dark" type="submit">Log in</button>
               </div>
             </form>
           </div>
