--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -43,7 +43,7 @@
               </div>
 
               <div class="col-12">
-                <button class="btn btn-warning">Create an account</button>
+                <button class="btn btn-outline-dark">Create an account</button>
               </div>
             </form>
           </div>
