Adds final changes before submission

--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <title>Urban Garden | Registration</title>
   <link rel="stylesheet" href="/dist/css/index.css">
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="/src/js/index.mjs" defer type="module"></script>
