--- a/profile/index.html
+++ b/profile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <title>Urban Garden | Profile Page</title>
   <link rel="stylesheet" href="/dist/css/index.css">
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="/src/js/index.mjs" defer type="module"></script>
@@ -49,8 +49,7 @@
                     <div id="profile" class="mt-3 mb-3">
                       <img id="avatar"   style="width: 280px"/>
                     </div>
-                    <!-- <h2 id></h2> -->
-                    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-body-secondary" style="width: 280px;">
+                    <!-- <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-body-secondary" style="width: 280px;">
                         <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none text-dark">
                           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
                           <span class="fs-4">Fellows</span>
@@ -88,7 +87,7 @@
                           </a>
                           </li>
                         </ul>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="col-8 mt-3">
                     <form id="createPost" class="p-4 p-md-5 border rounded-3 bg-light">
