--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
-  <link rel="stylesheet" href="/dist/css/index.css">
-  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="/src/js/index.mjs" defer type="module"></script>
-</head>
-<body>
-  <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg">
-      <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-        <div class="pb-1">
-          <h1 class="display-4 fw-bold lh-1">Welcome to Urban Garden</h1>
-          <p class="lead">Meet your people of interest, gain ideas, exchange experience! Sell and buy seeds, rent your tools or just breathe and refuel your soul in this creative and peaceful community. </p>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Urban Garden | Login Page</title>
+    <link rel="stylesheet" href="/dist/css/index.css" />
+    <script
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script src="/src/js/index.mjs" defer type="module"></script>
+  </head>
+  <body>
+    <div class="container my-5">
+      <div
+        class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg"
+      >
+        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
+          <div class="pb-1">
+            <h1 class="display-4 fw-bold lh-1">Welcome to Urban Garden</h1>
+            <p class="lead">
+              Meet your people of interest, gain ideas, exchange experience!
+              Sell and buy seeds, rent your tools or just breathe and refuel
+              your soul in this creative and peaceful community.
+            </p>
+          </div>
           <div class="col-md-10 mx-auto col-lg-12">
             <form id="loginForm" class="p-4 p-md-5 border rounded-3 bg-light">
-              
               <div class="mb-3">
                 <label class="mb-1">Email address</label>
-                <input type="email" name="email" class="form-control" 
-                id="validationDefault01" pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="Only @(stud).noroff.no domains are allowed" placeholder="Email address" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
+                <input
+                  type="email"
+                  name="email"
+                  class="form-control"
+                  id="validationDefault01"
+                  pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+                  title="Only @(stud).noroff.no domains are allowed"
+                  placeholder="Email address"
+                  required
+                />
+                <div class="valid-feedback">Looks good!</div>
               </div>
 
               <div class="mb-3">
                 <label class="mb-1">Password</label>
-                <input type="password" name="password" class="form-control"   minlength="8" placeholder="Password" required>
+                <input
+                  type="password"
+                  name="password"
+                  class="form-control"
+                  minlength="8"
+                  placeholder="Password"
+                  required
+                />
               </div>
 
               <div class="col-12">
-                <button id="regButton" class="btn btn-outline-dark" type="submit">Log in</button>
+                <button
+                  id="regButton"
+                  class="btn btn-outline-dark"
+                  type="submit"
+                >
+                  Log in
+                </button>
               </div>
             </form>
           </div>
-        <p class="mt-3">Don't have an account yet?<strong><a href="../register/index.html"> Sign up</a></strong></p>
-      </div>
-      <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
-          <img class="rounded-lg-3" src="/images/Hero_1.jpg" alt="" width="720">
+          <p class="mt-3">
+            Don't have an account yet?<strong
+              ><a href="../register/index.html"> Sign up</a></strong
+            >
+          </p>
+        </div>
+        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img
+            class="rounded-lg-3"
+            src="/images/Hero_1.jpg"
+            alt=""
+            width="720"
+          />
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
