--- a/profile/index.html
+++ b/profile/index.html
@@ -25,7 +25,7 @@
                 <li><a href="workshops.html" class="nav-link px-2 link-dark" style="display: none">Workshops</a></li>
               </ul>
               <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="searchForm" role="search">
-                <input type="search" class="form-control" id="searchInput" placeholder="Search..." aria-label="Search">
+                <input type="search" class="form-control" id="searchInput" style="display: none" placeholder="Search..." aria-label="Search">
               </form>
               <div class="dropdown text-end">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
